TWINS-687: field initializer
* TWINS-687: added support for default value configuration and validation enhancements across field typers

* TWINS-687: added support for default value configuration and validation enhancements across field typers

* TWINS-687: added support for default value configuration and validation enhancements across field typers

* TWINS-687: added support for default value configuration and validation enhancements across field typers

* TWINS-687: nullify and clear support

* TWINS-687: main merge fixes

* TWINS-687: main merge fixes

* TWINS-687: test fixes

* TWINS-687: test fixes

* TWINS-687: test fixes

* TWINS-687: check required on twin create

* TWINS-687: now() support

* TWINS-687: code review fixes

---------

Co-authored-by: nikita.mekh <n.mekh@hutkigrosh.by>